utility/usememos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memos
spec:
  type: ClusterIP
  ports:
    - port: 5230
      targetPort: 5230
  selector:
    app: memos
